# gpt-command

./: README.md  pyproject.toml
src/gpt_command/: cli.py  config.py  history.py  key_manager.py  utils.py
src/gpt_command.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
