[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-command"
version = "0.2.4"
description = "Turn natural language into ready-to-use terminal commands"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "openai>=2.0.0"
]

[project.scripts]
gptc-gen = "gpt_command.cli:main"
gptc-key = "gpt_command.key_manager:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]